solvealignMentIssueInMaster

--- a/src/app/views/administration/branch-master/branch-master.component.scss
+++ b/src/app/views/administration/branch-master/branch-master.component.scss
@@ -23,6 +23,6 @@
   }
   .mat-card{
     margin-top: 5%;
-    margin-bottom:30%;
+    margin-bottom:28%;
   }
  
