--- a/src/app/views/administration/class-master/class-master.component.scss
+++ b/src/app/views/administration/class-master/class-master.component.scss
@@ -24,6 +24,6 @@
   }
   .mat-card{
     margin-top: 5%;
-    margin-bottom:23.5%;
+    margin-bottom:22%;
   }
  
