--- a/src/app/views/administration/occupation-master/occupation-master.component.scss
+++ b/src/app/views/administration/occupation-master/occupation-master.component.scss
@@ -14,9 +14,9 @@
       margin-top: 3%;
       margin-bottom: 2%;
       font-weight: 500;
-      color:#fff !important;
       width: 25%;
-      margin-left: 37%;;
+      margin-left: 37%;
+      color:#fff !important;
   
   }
   .submit-title{
@@ -24,6 +24,6 @@
   }
   .mat-card{
     margin-top: 5%;
-    margin-bottom:30%;
+    margin-bottom:28%;
   }
  
