--- a/src/app/views/administration/religion-master/religion-master.component.scss
+++ b/src/app/views/administration/religion-master/religion-master.component.scss
@@ -25,6 +25,6 @@
 
   .mat-card{
     margin-top: 5%;
-    margin-bottom: 30%;
+    margin-bottom: 28%;
   }
   
