--- a/src/app/views/administration/school-master/school-master.component.scss
+++ b/src/app/views/administration/school-master/school-master.component.scss
@@ -27,7 +27,8 @@
       font-weight: 500;
   }
   .mat-card{
+      position: relative;
     margin-top:4%;
-    margin-bottom:10%;
+    margin-bottom:23%;
   }
   
